Latest revision of RFP1.1c v2.3

--- a/Contracts/RFP/RFP1_1a_InterplanetaryComms.cfg
+++ b/Contracts/RFP/RFP1_1a_InterplanetaryComms.cfg
@@ -42,6 +42,15 @@ CONTRACT_TYPE
     // Target Body
     targetBody = Kerbin
     
+    
+    BEHAVIOUR
+    {
+        name = UnlockRC001S
+        type = ExperimentalPart
+        part = probeStackSmall
+        unlockCriteria = CONTRACT_ACCEPTANCE
+    }
+
 //==========================================================================================
 //Validation Parameters
 //==========================================================================================
@@ -51,7 +60,7 @@ CONTRACT_TYPE
         name = DevelopRelayNet
         type = VesselParameterGroup
         title = Develop Flexible Satellite Constellation 
-	notes = Technology Validation Requirements:\n\nRelay Constellation Management\nDeploy 3 relay satellites in different Kerbin orbits to test coordination between multiple communications assets.\n\nContinuous Coverage Demonstration\nProve constellation maintains continuous coverage during orbital mechanics and satellite positioning changes.\n\nHigh-Gain Antenna Systems\nTest high-gain antenna systems and data transmission capabilities under various range and angle conditions.
+	    notes = Technology Validation Requirements:\nDeploy 3 relay satellites in different Kerbin orbits to test coordination between multiple communications assets.\nProve constellation maintains continuous coverage during orbital mechanics and satellite positioning changes.\nTest high-gain antenna systems and data transmission capabilities under various range and angle conditions.
     
          
         PARAMETER
@@ -62,7 +71,7 @@ CONTRACT_TYPE
             partModule = ModuleDataTransmitter
             title = Each Satellite has Comms
             minCount = 3 
-	    hideChildren = true 
+	        hideChildren = true 
         }
 
         PARAMETER
@@ -72,7 +81,7 @@ CONTRACT_TYPE
             partModule = ModuleDeployableSolarPanel
             minCount = 6
             title = Each Satellite has 2 Solar Panels
- 	    hideChildren = true
+ 	        hideChildren = true
         }
   
         PARAMETER
@@ -81,7 +90,7 @@ CONTRACT_TYPE
             type = Orbit
             targetBody = Kerbin
             minAltitude = 150000
-	    hidden = true
+	        hidden = true
 	}
     }
 
@@ -228,5 +237,4 @@ CONTRACT_TYPE
             hideChildren = true
         }
     }
-    
 }
