--- a/Contracts/RFP/RFP1_1b_PrecisionLanding.cfg
+++ b/Contracts/RFP/RFP1_1b_PrecisionLanding.cfg
@@ -30,6 +30,13 @@ CONTRACT_TYPE
     {
         name = CompleteContract
         type = CompleteContract
+        contractType = RF0_2_Signals
+    }
+
+    REQUIREMENT
+    {
+        name = AcceptContract
+        type = AcceptContract
         contractType = RFP1_1a_InterplanetaryComms
     }
     
