--- a/Contracts/RFP/RFP1_1c_ReusableLaunch.cfg
+++ b/Contracts/RFP/RFP1_1c_ReusableLaunch.cfg
@@ -5,7 +5,7 @@ CONTRACT_TYPE
     
     description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Launch Systems Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Reusable Launch System Validation\n\nThe upcoming Duna deployment missions will require multiple heavy launches within tight transfer windows. Current expendable launch systems are inefficient for the scale of operations planned, necessitating reusable technology to reduce costs and increase launch frequency.\n\nThis pathfinder mission will validate our reusable booster technology through powered landing recovery at KSC. The booster must deliver a payload to orbit while retaining sufficient fuel to return to the launch site with all engines intact.\n\nYour objective is to demonstrate a multi-engine booster core that can successfully deliver payload to orbit and return to KSC via powered landing. This will prove the fundamental technology needed for cost-effective deployment during the main Duna mission phase.
     
-    notes = Technology Validation Requirements:\n\nMulti-Engine Booster Core\nDevelop reusable launch vehicle with minimum 3 engines capable of payload delivery and powered recovery.\n\nPayload Delivery Capability\nSuccessfully deliver payload to target orbit (100-200km) while preserving booster for recovery.\n\nPowered Landing Recovery\nDemonstrate controlled powered landing at KSC with engines intact and fuel remaining.\n\nLanding Site Precision\nProve booster can return precisely to launch site for refurbishment and reuse operations.
+    notes = Technology Validation Requirements:\n\nMulti-Engine Booster Core\nDevelop reusable launch vehicle with minimum 3 engines capable of payload delivery and powered recovery.\n\nPayload Delivery Capability\nSuccessfully deliver payload to target orbit (100-200km) while preserving booster for recovery.\n\nPowered Landing Recovery\nDemonstrate controlled powered landing at KSC with engines intact and fuel remaining.\n
     
     synopsis = Validate reusable booster technology through orbital payload delivery and powered landing recovery at KSC.
     
@@ -31,9 +31,16 @@ CONTRACT_TYPE
     {
         name = CompleteContract
         type = CompleteContract
+        contractType = RF0_2_Signals
+    }
+
+    REQUIREMENT
+    {
+        name = AcceptContract
+        type = CompleteContract
         contractType = RFP1_1b_PrecisionLanding
     }
-    
+
     // Rewards - pathfinder level
     advanceFunds = 60000.0
     rewardFunds = 120000.0
@@ -59,94 +66,170 @@ CONTRACT_TYPE
     {
         name = DevelopReusableBooster
         type = VesselParameterGroup
-        title = Develop Advanced Surface Probes
-        notes = Technology Validation Requirements: Booster Recovery Systems\nSuccessfully deliver payload to orbit while retaining fuel for booster recovery capability.\nDemonstrate successful booster return to KSC via powered landing with core engines intact.\n\nPayload Delivery\n\nLanding Precision\nProve booster can return to launch site for refurbishment and reuse.
+        title = Develop Reusable Booster and Orbiter
+        //notes = Technology Validation Requirements: Booster Recovery Systems\nSuccessfully deliver payload to orbit while retaining fuel for booster recovery capability.\nDemonstrate successful booster return to KSC via powered landing with core engines intact.\n\nPayload Delivery\n\nLanding Precision\nProve booster can return to launch site for refurbishment and reuse.
+        notes = Design reusable orbiter with minimum 3 engines, payload bay, communications antenna, and retractable solar panels for recovery operations.
+	    PARAMETER
+	    {
+	        name = HasBoosterEngines
+	        type = PartValidation
+	        partModule = ModuleEngines
+	        minCount = 3
+	        title = Multi-Engine Booster Core (At Least 3 Engines)
+	        hideChildren = true
+	    }
     
-	PARAMETER
-	{
-	    name = HasBoosterEngines
-	    type = PartValidation
-	    partModule = ModuleEngines
-	    minCount = 3
-	    title = Multi-Engine Booster Core (At Least 3 Engines)
-	    hideChildren = true
-	}
-    
-	PARAMETER
-	{
-	    name = HasPayloadCapacity
-	    type = PartValidation
-	    partModule = ModuleCommand
-	    minCount = 1
-	    title = Payload Delivery Capability
-	    hideChildren = true
-	}
-	
+	    PARAMETER
+	    {
+	        name = HasPayloadCapacity
+	        type = PartValidation
+	        partModule = ModuleCargoBay
+	        minCount = 1
+	        title = Payload Delivery Capability
+	        hideChildren = true
+	    }
+
+		PARAMETER
+	    {
+	        name = HasComms
+	        type = PartValidation
+	        partModule = ModuleDataTransmitter
+	        minCount = 1
+	        title = Communications System
+	        hideChildren = true
+	    }
+
+        PARAMETER
+	    {
+	        name = HasComms
+	        type = PartValidation
+	        partModule = ModuleDeployableSolarPanel
+	        minCount = 1
+	        title = Retractable Solar Power Generation
+	        hideChildren = true
+	    }
     }
 
 //==========================================================================================
 // Objectives - Initial launch and booster recovery
 //==========================================================================================
 
+
+
+  PARAMETER
+  {
+    name = Flight
+    type = Sequence
+    title = Successfully Launch & Return to Launchsite
+    hiddenParameter = HasLaunched
+
     PARAMETER
     {
-	name = PayloadDelivery
-	type = VesselParameterGroup
-	title = Payload Delivery to Orbit
-    
-	define = Orbital Payload
-    
-	PARAMETER
-	{
-	    name = PayloadOrbit
-	    type = Orbit
-	    targetBody = Kerbin
-	    minAltitude = 100000
-	    maxAltitude = 200000
-	    title = Successfully deliver payload to target orbit
-	    hideChildren = true
-	}
+        name = HasLaunched
+        type = ReachState
+        targetBody = Kerbin
+        situation = FLYING
+        minAltitude = 3500
+        title = Liftoff
+        hideChildren = true
+        disableOnStateChange = true
     }
-
-//==========================================================================================
 
     PARAMETER
     {
 	name = BoosterRecovery
 	type = VesselParameterGroup
 	title = Booster Recovery at KSC
+    completeInSequence = true
+	notes = Landing Site Precision\nProve booster can return precisely to launch site for refurbishment and reuse operations.
     
-	define = Recovered Booster
+        PARAMETER
+        {
+            name = ReachState
+            type = ReachState
+            situation = LANDED
+            disableOnStateChange = true
+            completeInSequence = true
+            maxSpeed = 1
+            maxAcceleration = 1.1
+            hidden = true
+	     }
+
+	    PARAMETER
+	    {
+            name = ReturnNearKSC
+            type = VisitWaypoint
+            index = 0
+            distance = 3000.0
+	        title = Land booster at Kerbal Space Center
+	        hideChildren = true 
+            disableOnStateChange = false
+            completeInSequence = true
+
+
+        }
     
-	PARAMETER
-	{
-	    name = ReturnToKSC
-	    type = ReachState
-	    targetBody = Kerbin
-	    situation = LANDED
-	    biome = KSC
-	    title = Land booster at Kerbal Space Center
-	    hideChildren = true
-	}
+	    PARAMETER
+	    {
+	        name = EnginesIntact
+	        type = PartValidation
+	        partModule = ModuleEngines
+	        minCount = 1
+	        title = Engines survived recovery
+	        hideChildren = true
+            disableOnStateChange = true
+            completeInSequence = false
+	    }
     
-	PARAMETER
-	{
-	    name = EnginesIntact
-	    type = PartValidation
-	    partModule = ModuleEngines
-	    minCount = 1
-	    title = Engines survived recovery
-	    hideChildren = true
-	}
+	    PARAMETER
+	    {
+	        name = FuelRemaining
+	        type = HasResource
+	        resource = LiquidFuel
+	        minQuantity = 1.0
+	        title = Land with any Liquid Fuel remaining
+	        hideChildren = true
+            disableOnStateChange = true
+            completeInSequence = false
+	    }
+     }
+  }
+
+     BEHAVIOUR
+     {
+        name = WaypointGenerator
+        type = WaypointGenerator
     
-	PARAMETER
-	{
-	    name = FuelRemaining
-	    type = HasResource
-	    resource = LiquidFuel
-	    minQuantity = 1.0
-	    title = Land with any Liquid Fuel remaining
-	    hideChildren = true
-	}
+        WAYPOINT
+        {
+            name = KSC Recovery Zone
+            icon = marker
+            altitude = 0
+            latitude = -0.0972
+            longitude = -74.5577
+        }
+     }
+ 
+
+//==========================================================================================
+
+    PARAMETER
+    {
+	    name = PayloadDelivery
+	    type = VesselParameterGroup
+	    title = Payload Delivery to Orbit
+        notes = Successfully deliver payload to target orbit (100-500km) demonstrating booster efficiency and capability.
+	    define = Orbital Payload
+    
+	    PARAMETER
+	    {
+	        name = PayloadOrbit
+	        type = Orbit
+	        targetBody = Kerbin
+	        minAltitude = 100000
+	        maxAltitude = 500000
+	        title = Successfully deliver payload to target orbit (100km-500km)
+	        hideChildren = true
+	    }
     }
 }
