updated version of RFP1.1d & RFP1.1e

--- a/Contracts/RFP/RFP1_1e_ResourceExtraction.cfg
+++ b/Contracts/RFP/RFP1_1e_ResourceExtraction.cfg
@@ -29,13 +29,13 @@ extraction, processing, and logistics integration.\n\nYour objective is to devel
     maxSimultaneous = 1
     
     // Available after RFP1.1d completion
-    REQUIREMENT
+        REQUIREMENT
     {
         name = CompleteContract
         type = CompleteContract
-        contractType = RFP1_1d_OrbitalPlatform
+        contractType = RFP1_1c_ReusableLaunch
     }
-    
+
     // Rewards - pathfinder level, bonus for completing all pathfinders
     advanceFunds = 90000.0
     rewardFunds = 180000.0
@@ -71,8 +71,8 @@ extraction, processing, and logistics integration.\n\nYour objective is to devel
             type = PartValidation
             partModule = ModuleResourceHarvester
             minCount = 1
-	    title = Test Protorype Drilling Equipment
-	    hideChildren = true
+	        title = Test Protorype Drilling Equipment
+	        hideChildren = true
         }
         
         PARAMETER
@@ -81,8 +81,8 @@ extraction, processing, and logistics integration.\n\nYour objective is to devel
             type = PartValidation
             partModule = ModuleResourceConverter
             minCount = 1
-	    title = Test Fuel Production Methodology
-	    hideChildren = true
+	        title = Test Fuel Production Methodology
+	        hideChildren = true
         }
 
         PARAMETER
@@ -102,8 +102,8 @@ extraction, processing, and logistics integration.\n\nYour objective is to devel
             type = HasResourceCapacity
             resource = Ore
             minQuantity = 600.0
-	    title = Minimun 600 Ore Capacity
-	    hideChildren = true
+	        title = Minimun 600 Ore Capacity
+	        hideChildren = true
         }
         
         PARAMETER
@@ -112,8 +112,8 @@ extraction, processing, and logistics integration.\n\nYour objective is to devel
             type = PartValidation
             partModule = ModuleDeployableSolarPanel
             minCount = 2
-	    title = Has Redundant Solar Arrays (Minimum 2)
-	    hideChildren = true
+	        title = Has Redundant Solar Arrays (Minimum 2)
+	        hideChildren = true
         }
     }
 
@@ -139,9 +139,10 @@ extraction, processing, and logistics integration.\n\nYour objective is to devel
                 type = ReachState
                 targetBody = Minmus
                 situation = LANDED
-	        hidden = true
+	            hidden = true
             }
         }
+
         PARAMETER
         {
             name = HasOreStorage
@@ -149,7 +150,7 @@ extraction, processing, and logistics integration.\n\nYour objective is to devel
             resource = Ore
             minQuantity = 500.0
             title = Mine 500 units of regolith
-	    hideChildren = true 
+	        hideChildren = true 
         }
 
        //======================================================================================
@@ -219,14 +220,14 @@ extraction, processing, and logistics integration.\n\nYour objective is to devel
             type = VesselParameterGroup
             title = Fuel Transfer Operations Test
         
-            //define = Minmus Science Station //commented out for debug
+            // define = Minmus Science Station //commented out for debug
         
             PARAMETER
             {
                 name = DockWithISRU
                 type = Docking
 	            vessel = Minmus ISRU Lander
-                defineDockedVessel = Minmus Science Station
+                // defineDockedVessel = Minmus Science Station
     	        title = Dock ISRU Lander with Minmus Science Station
     	        notes = Demonstrate fuel transfer from ISRU facility to existing orbital infrastructure.
 	            hideChildren = true 
