--- a/Contracts/RFP/RFP1_1a_InterplanetaryComms.cfg
+++ b/Contracts/RFP/RFP1_1a_InterplanetaryComms.cfg
@@ -3,12 +3,12 @@ CONTRACT_TYPE
     name = RFP1_1a_InterplanetaryComms
     title = RFP1.1a: "Interplanetary Communications Network"
     
-    description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Communications Technology Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Communications Relay Architecture Validation\n\n
+    description = Mission Computer Terminal:\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Communications Technology Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Communications Relay Architecture Validation\n\n
     notes = Before we commit to deploying communications infrastructure in the Duna system, we need to validate our relay constellation management technology. The challenges of maintaining continuous coverage across multiple orbital mechanics require thorough testing.\n\nThis pathfinder mission will test our communications relay architecture in the Kerbin system, where we can monitor performance closely and make adjustments before interplanetary deployment.\n\nYour objective is to deploy and operate a 3-satellite relay constellation that provides continuous coverage during various orbital configurations. This will prove our ability to coordinate multiple communications assets and maintain reliable data transmission under dynamic conditions.
         
     synopsis = Validate communications relay constellation technology in Kerbin system before interplanetary deployment.
     
-    completedMessage = Excellent work! The communications relay constellation has successfully demonstrated continuous coverage and coordination capabilities. The technology is now validated for interplanetary deployment. RFP1.1b is now available.
+    completedMessage = Excellent work! The communications relay constellation has successfully demonstrated continuous coverage and coordination capabilities. The technology is now validated for interplanetary deployment.
     
     // Contract parameters
     agent = Lowne Aerospace
