--- a/Contracts/RFP/RFP1_1b_PrecisionLanding.cfg
+++ b/Contracts/RFP/RFP1_1b_PrecisionLanding.cfg
@@ -3,12 +3,12 @@ CONTRACT_TYPE
     name = RFP1_1b_PrecisionLanding
     title = RFP1.1b: "Precision Landing Technology"
     
-    description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Landing Systems Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Precision Surface Probe Landing Systems
+    description = Mission Computer Terminal:\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Landing Systems Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Precision Surface Probe Landing Systems
 	notes = Our upcoming Duna missions will require precise landing capabilities to deploy surface probes at specific locations of scientific interest. Before committing to interplanetary deployment, we must validate our precision landing technology and surface operations protocols.\n\nThis pathfinder mission will test precision landing systems by deploying probes to specific coordinates across different Kerbin biomes. The varied terrain and environmental conditions will provide comprehensive validation of our landing technology before Duna deployment.\n\nYour objective is to demonstrate precision landing within 500 meters of designated targets, prove surface science operations capability, and validate probe survival and communication systems for extended operations.
     
     synopsis = Validate precision landing and surface operations technology using Kerbin as test environment.
     
-    completedMessage = Outstanding! The precision landing technology has been successfully validated. All surface probes demonstrated accurate landing capability and reliable operations. The technology is ready for interplanetary deployment. RFP1.1c is now available.
+    completedMessage = Outstanding! The precision landing technology has been successfully validated. All surface probes demonstrated accurate landing capability and reliable operations. The technology is ready for interplanetary deployment.
     
     // Contract parameters
     agent = Lowne Aerospace
