--- a/Agencies/RedFrontierAgency.cfg
+++ b/Agencies/RedFrontierAgency.cfg
@@ -1,9 +1,9 @@
 AGENT
 {
-    name = Lowne Aerospace
+    name = Kerbal Initiatives Division
     
     // Display name of the agent
-    title = Lowne Aerospace
+    title = Kerbal Initiatives Division
     
     // Description of the agent
     description = A pioneering aerospace contractor specializing in deep space operations and interplanetary exploration initiatives.
